fix header spacings (again)

--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -4,7 +4,6 @@
 
 .part-container
     display: flex
-    align-items: center
     padding: 10px
     border-radius: 150px
     background-color: $c-nqblack
@@ -81,6 +80,7 @@
 
     .routes
         display: flex
+        align-items: center
         margin-left: 20px
 
         a
@@ -98,6 +98,7 @@
 .btn-login
     padding: 4px 14px
     display: flex
+    align-items: center
 
 
 @media only screen and (max-width: 900px)
